Include pinctrl.LICENSE in COPYING
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21938 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -441,6 +441,14 @@ COPYING: $(COMPONENT_TARGETS)
 	@echo ""						>>$@
 	@cat $(OPENSSH_SRC)/LICENCE				>>$@
 	@echo ""						>>$@
+ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
+ifeq ($(GCCARCH), aarch64)
+	@echo "**** pinctrl"					>>$@
+	@echo ""						>>$@
+	@cat pinctrl.LICENSE					>>$@
+	@echo ""						>>$@
+endif
+endif
 	@echo "**** regulatory.db:"				>>$@
 	@echo ""						>>$@
 	@cat $(WIRELESS_REGDB_SRC)/LICENSE			>>$@
