--- a/bootkernel/kernel/RaspberryPi5.config
+++ b/bootkernel/kernel/RaspberryPi5.config
@@ -2267,7 +2267,7 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_OCC_P8_I2C is not set
 # CONFIG_SENSORS_PCF8591 is not set
 # CONFIG_PMBUS is not set
-# CONFIG_SENSORS_PWM_FAN is not set
+CONFIG_SENSORS_PWM_FAN=y
 CONFIG_SENSORS_RASPBERRYPI_HWMON=y
 # CONFIG_SENSORS_SBTSI is not set
 # CONFIG_SENSORS_SBRMI is not set
@@ -2319,7 +2319,7 @@ CONFIG_SENSORS_RASPBERRYPI_HWMON=y
 # CONFIG_SENSORS_W83L786NG is not set
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
-# CONFIG_SENSORS_RP1_ADC is not set
+CONFIG_SENSORS_RP1_ADC=y
 CONFIG_THERMAL=y
 # CONFIG_THERMAL_NETLINK is not set
 # CONFIG_THERMAL_STATISTICS is not set
@@ -3984,12 +3984,12 @@ CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_DEBUG is not set
 # CONFIG_PWM_ATMEL_TCB is not set
 # CONFIG_PWM_BCM2835 is not set
-# CONFIG_PWM_BRCMSTB is not set
+CONFIG_PWM_BRCMSTB=y
 # CONFIG_PWM_CLK is not set
 # CONFIG_PWM_DWC is not set
 # CONFIG_PWM_FSL_FTM is not set
 CONFIG_PWM_PCA9685=y
-CONFIG_PWM_RASPBERRYPI_POE=y
+# CONFIG_PWM_RASPBERRYPI_POE is not set
 CONFIG_PWM_RP1=y
 # CONFIG_PWM_XILINX is not set
 
