Added a check for arm64 before messing with lib64/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21949 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -768,8 +768,10 @@ $(INSTALLDIR)/lib/libffi.a: $(LIBFFI_SRC)
 	cd $(LIBFFI_SRC) ; ./configure $(BUILDOS) $(TARGETOS) --prefix=/$(INSTALLDIR) --enable-static --enable-shared CC=$(CROSS_COMPILE)gcc
 	$(MAKE) -C $(LIBFFI_SRC)
 	$(MAKE) -C $(LIBFFI_SRC) install DESTDIR=$(DESTDIR)
+ifeq ($(ARCH), arm64)
 	mv $(INSTALLDIR)/lib64/* $(INSTALLDIR)/lib
 	rmdir $(INSTALLDIR)/lib64
+endif
 
 libffi: $(INSTALLDIR)/lib/libffi.a
 
