Cosmetic change to description.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21950 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/python3/control
+++ b/extensions/python3/control
@@ -4,4 +4,4 @@ Priority: extra
 Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
-Description: Python3 package for MuntsOS
+Description: Python 3 Runtime package for MuntsOS
