Remove native.d in distclean target, not reallyclean.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21956 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/python3/Makefile
+++ b/extensions/python3/Makefile
@@ -155,7 +155,7 @@ clean:
 	if [ ! -f $(PKGFILE).downloaded ]; then rm -f $(PKGFILE) ; fi
 
 reallyclean: clean
-	rm -rf $(NATIVEDIR) $(CROSSDIR) $(PKGFILE) $(PKGFILE).downloaded
+	rm -rf $(CROSSDIR) $(PKGFILE) $(PKGFILE).downloaded
 
 distclean: reallyclean
-	rm -rf $(SRCDIST)
+	rm -rf $(NATIVEDIR) $(SRCDIST)
