Patch initconfig.c to disable byte code caching
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21974 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/python3/Makefile
+++ b/extensions/python3/Makefile
@@ -88,7 +88,7 @@ native : $(NATIVEPYTHON)
 $(CROSSPYTHON) : $(NATIVEPYTHON)
 	mkdir -p $(CROSSDIR)
 	cd $(CROSSDIR) && tar xzf $(SRCDIST)
-	cd $(CROSSDIR) && cd $(SRCDIR) && patch -b -p0 <../../modules.patch
+	cd $(CROSSDIR) && cd $(SRCDIR) && patch -b -p0 <../../python3.patch
 	cd $(CROSSDIR) && $(SRCDIR)/configure $(CROSSCONFIG)
 	cd $(CROSSDIR) && $(MAKE)
 	cd $(CROSSDIR) && $(MAKE) install DESTDIR=$(CROSSDIR)
