--- a/boot/RaspberryPi/overlays/MCP23017.dts
+++ b/boot/RaspberryPi/overlays/MCP23017.dts
@@ -7,7 +7,7 @@
 	compatible = "brcm,bcm2835";
 
 	fragment@0 {
-		target = <&i2c>;
+		target = <&i2c_arm>;
 		__overlay__ {
 			status = "okay";
 		};
@@ -24,7 +24,7 @@
 	};
 
 	fragment@2 {
-		target = <&i2c>;
+		target = <&i2c_arm>;
 		__overlay__ {
 			#address-cells = <1>;
 			#size-cells = <0>;
