Don't build ENC28J60 et al drivers as modules
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22023 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -1296,9 +1296,9 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 CONFIG_NET_VENDOR_MICROCHIP=y
-CONFIG_ENC28J60=m
+CONFIG_ENC28J60=y
 # CONFIG_ENC28J60_WRITEVERIFY is not set
-CONFIG_ENCX24J600=m
+CONFIG_ENCX24J600=y
 # CONFIG_NET_VENDOR_MICROSEMI is not set
 # CONFIG_NET_VENDOR_MICROSOFT is not set
 # CONFIG_NET_VENDOR_NI is not set
@@ -1319,12 +1319,12 @@ CONFIG_ENCX24J600=m
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
 # CONFIG_NET_VENDOR_VIA is not set
 CONFIG_NET_VENDOR_WIZNET=y
-CONFIG_WIZNET_W5100=m
-CONFIG_WIZNET_W5300=m
+CONFIG_WIZNET_W5100=y
+CONFIG_WIZNET_W5300=y
 # CONFIG_WIZNET_BUS_DIRECT is not set
 # CONFIG_WIZNET_BUS_INDIRECT is not set
 CONFIG_WIZNET_BUS_ANY=y
-CONFIG_WIZNET_W5100_SPI=m
+CONFIG_WIZNET_W5100_SPI=y
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_PHYLINK=y
 CONFIG_PHYLIB=y
