Include the en_US.utf8 locale.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22162 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/gconv/Makefile
+++ b/extensions/gconv/Makefile
@@ -42,8 +42,11 @@ $(PKGDIR):
 	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVERSION)/g		$(PKGDIR)/DEBIAN/control
+	install -cm 0755 postinst			$(PKGDIR)/DEBIAN
 	mkdir -p					$(PKGDIR)/usr/lib
 	cp -R -P -p $(LIBSLIBDIR)/gconv			$(PKGDIR)/usr/lib
+	mkdir -p					$(PKGDIR)/usr/lib/locale
+	tar xzf en_US.utf8.tgz -C			$(PKGDIR)/usr/lib/locale
 	touch $@
 
 package.deb: $(PKGFILE)
