The RP1 PWM subsystem requires a different clock frequency
BCM2835 (Raspberry Pi 1 to 4) requires the PWM master clock
frequency to be 100.00 MHz.

RP1 (Raspberry Pi 5) requires the PWM master clock
frequency to be 30.720 MHz.

Changing the frequency requires new device tree overlays
pwmchip0-pi5.dtbo and Pi3ClickShield-pi5.dtbo.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22213 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -71,10 +71,13 @@ ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
 	cp $(MUNTSOS)/boot/RaspberryPi/overlays/*.dtbo     $(DESTDIR)/overlays
 	cp $(MUNTSOS)/boot/RaspberryPi/overlays/README.txt $(DESTDIR)/overlays
 ifeq ($(findstring RaspberryPi4, $(BOARDNAME)),)
-	rm -f $(DESTDIR)/overlays/*-rp4.dtbo
+	rm -f $(DESTDIR)/overlays/*-pi4.dtbo
 endif
 ifeq ($(findstring RaspberryPi5, $(BOARDNAME)),)
-	rm -f $(DESTDIR)/overlays/*-rp5.dtbo
+	rm -f $(DESTDIR)/overlays/*-pi5.dtbo
+else
+	rm -f $(DESTDIR)/overlays/Pi3ClickShield.dtbo
+	rm -f $(DESTDIR)/overlays/pwmchip0.dtbo
 endif
 endif
 
