Use ldd from cross-toolchain instead of stored copy
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22215 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -578,8 +578,8 @@ endif
 
 # Install ldd
 
-	install -cm 0755 ldd					$@/usr/bin
-	sed -i 's#@@GCCLDLINUX@@#$(shell basename $(GCCLDLINUX))#g' $@/usr/bin/ldd
+	install -cm 0755 $(LIBSBINDIR)/ldd			$@/usr/bin
+	sed -i 's#/bin/bash#/bin/sh#g'				$@/usr/bin/ldd
 
 # Install linklibs
 
