Cosmetic fix for a couple of comments
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22216 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -376,12 +376,12 @@ libusb: $(INSTALLDIR)/lib/libusb-1.0.a
 
 ###############################################################################
 
-# Download libusb source distribution
+# Download hidapi source distribution
 
 $(HIDAPI_DIST):
 	wget -nv -P $(TEMP) $(HIDAPI_URL)
 
-# Unpack libusb source
+# Unpack hidapi source
 
 $(HIDAPI_SRC): $(HIDAPI_DIST)
 	tar xzf $(HIDAPI_DIST)
