Strip shared library files
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22218 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/python3/Makefile
+++ b/extensions/python3/Makefile
@@ -133,7 +133,7 @@ $(PKGDIR) : $(CROSSPYTHON)
 	cp -R -P -p $(LIBSIMPLEIO)/python/packages/munts $(PKGDIR)/usr/local/lib/python$(MAJORVER)
 	find $(PKGDIR) -name __pycache__ -exec rm -rf {} ";" >/dev/null 2>&1 ; true
 	install -cm 0755 $(LIBSLIBDIR)/libffi.so.8	$(PKGDIR)/usr/local/lib
-	$(CROSS_COMPILE)strip				$(PKGDIR)/usr/local/lib/*.so*
+	$(CROSS_COMPILE)strip				$(PKGDIR)/usr/local/lib/*.so.*
 	touch $@
 
 cross: $(CROSSDIR)
