libusb needs libatomic, too.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22219 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/libusb/Makefile
+++ b/extensions/libusb/Makefile
@@ -44,6 +44,7 @@ $(PKGDIR):
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$@/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVERSION)/g		$@/DEBIAN/control
 	mkdir -p					$@/usr/local/lib
+	install -cm 0755 $(GCCSYSROOT)/usr/lib/libatomic.so.1	$@/usr/local/lib
 	install -cm 0755 $(GCCSYSROOT)/usr/lib/libusb-1.0.so.0	$@/usr/local/lib
 	$(CROSS_COMPILE)strip				$@/usr/local/lib/*.so.*
 	touch $@
