Don't patch Makefile anymore.
The Makefile patch doesn't work with kernel 6.6.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22226 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -90,10 +90,12 @@ dtbs: $(KERNEL_WORK)/dtbs.done
 
 ###############################################################################
 
-# Build modules
+# Build kernel modules including builtins
 
 $(KERNEL_WORK)/modules.done: $(KERNEL_WORK)/config.done
-	$(MAKE) $(MAKEJOBS) $(MAKE_ARGS) modules
+	touch ../initramfs/initramfs.cpio.gz
+	$(MAKE) $(MAKE_JOBS) $(MAKE_ARGS) modules KBUILD_BUILTIN=1
+	rm ../initramfs/initramfs.cpio.gz
 	$(MAKE) $(MAKE_ARGS) modules_install INSTALL_MOD_PATH=$(KERNEL_WORK)/modules
 	rm $(KERNEL_WORK)/modules/lib/modules/*/build
 	rm $(KERNEL_WORK)/modules/lib/modules/*/source
