Upgrade Raspberry Pi kernel to 6.6
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22230 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -722,6 +722,15 @@ ifeq ($(KERNEL_BRANCH), 6.1)
 	sed -i '/# Initialize user LED/i fi'			$@/etc/rc
 	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
 endif
+ifeq ($(KERNEL_BRANCH), 6.6)
+	sed -i 's#@@USERLED@@#/sys/class/leds/ACT#g'		$@/etc/rc
+	sed -i '/# Initialize user LED/i # Initialize power LED (if necessary)' $@/etc/rc
+	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
+	sed -i '/# Initialize user LED/i if [ -f /sys/class/leds/PWR/trigger ]; then' $@/etc/rc
+	sed -i '/# Initialize user LED/i\\  echo default-on >/sys/class/leds/PWR/trigger' $@/etc/rc
+	sed -i '/# Initialize user LED/i fi'			$@/etc/rc
+	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
+endif
 endif
 	install -cm 0444 rpc					$@/etc
 	install -cm 0444 services				$@/etc
