--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -705,31 +705,8 @@ endif
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
 ifeq ($(KERNEL_BRANCH), 5.15)
 	sed -i 's#@@USERLED@@#/sys/class/leds/led0#g'		$@/etc/rc
-	sed -i '/# Initialize user LED/i # Initialize power LED (if necessary)' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
-	sed -i '/# Initialize user LED/i if [ -f /sys/class/leds/led1/trigger ]; then' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\  echo none >/sys/class/leds/led1/trigger' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\  echo 1 >/sys/class/leds/led1/brightness' $@/etc/rc
-	sed -i '/# Initialize user LED/i fi'			$@/etc/rc
-	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
-endif
-ifeq ($(KERNEL_BRANCH), 6.1)
+else
 	sed -i 's#@@USERLED@@#/sys/class/leds/ACT#g'		$@/etc/rc
-	sed -i '/# Initialize user LED/i # Initialize power LED (if necessary)' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
-	sed -i '/# Initialize user LED/i if [ -f /sys/class/leds/PWR/trigger ]; then' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\  echo default-on >/sys/class/leds/PWR/trigger' $@/etc/rc
-	sed -i '/# Initialize user LED/i fi'			$@/etc/rc
-	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
-endif
-ifeq ($(KERNEL_BRANCH), 6.6)
-	sed -i 's#@@USERLED@@#/sys/class/leds/ACT#g'		$@/etc/rc
-	sed -i '/# Initialize user LED/i # Initialize power LED (if necessary)' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
-	sed -i '/# Initialize user LED/i if [ -f /sys/class/leds/PWR/trigger ]; then' $@/etc/rc
-	sed -i '/# Initialize user LED/i\\  echo default-on >/sys/class/leds/PWR/trigger' $@/etc/rc
-	sed -i '/# Initialize user LED/i fi'			$@/etc/rc
-	sed -i '/# Initialize user LED/i\\'			$@/etc/rc
 endif
 endif
 	install -cm 0444 rpc					$@/etc
