--- a/bootkernel/kernel/RaspberryPi5.config
+++ b/bootkernel/kernel/RaspberryPi5.config
@@ -2147,11 +2147,11 @@ CONFIG_GPIO_PCF857X=y
 #
 # SPI GPIO expanders
 #
-# CONFIG_GPIO_74X164 is not set
+CONFIG_GPIO_74X164=y
 # CONFIG_GPIO_MAX3191X is not set
-# CONFIG_GPIO_MAX7301 is not set
+CONFIG_GPIO_MAX7301=y
 # CONFIG_GPIO_MC33880 is not set
-# CONFIG_GPIO_PISOSR is not set
+CONFIG_GPIO_PISOSR=y
 # CONFIG_GPIO_XRA1403 is not set
 # end of SPI GPIO expanders
 
@@ -2173,7 +2173,7 @@ CONFIG_GPIO_PCF857X=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_BRCMSTB is not set
 CONFIG_POWER_RESET_GPIO=y
-# CONFIG_POWER_RESET_GPIO_RESTART is not set
+CONFIG_POWER_RESET_GPIO_RESTART=y
 # CONFIG_POWER_RESET_LTC2952 is not set
 # CONFIG_POWER_RESET_REGULATOR is not set
 # CONFIG_POWER_RESET_RESTART is not set
@@ -4246,7 +4246,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 # CONFIG_F2FS_FS is not set
-CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
 # CONFIG_EXPORTFS_BLOCK_OPS is not set
 CONFIG_FILE_LOCKING=y
@@ -4307,8 +4306,8 @@ CONFIG_PROC_CHILDREN=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
-CONFIG_TMPFS_POSIX_ACL=y
-CONFIG_TMPFS_XATTR=y
+# CONFIG_TMPFS_POSIX_ACL is not set
+# CONFIG_TMPFS_XATTR is not set
 # CONFIG_TMPFS_INODE64 is not set
 # CONFIG_TMPFS_QUOTA is not set
 CONFIG_ARCH_SUPPORTS_HUGETLBFS=y
